# Spacy-Integration-Tests-deal.II

./: .travis.yml  CMakeLists.txt  README.md  mockSetup.hh  project.config  run_test_in_docker.sh
Mock/: C2Functional.cpp  LinearOperator.cpp  LinearOperator.h  LinearSolver.cpp  Norm.cpp  Norm.h  ScalarProduct.cpp  ScalarProduct.h  Vector.cpp  VectorCreator.cpp  c2Functional.cpp  linearOperator.hh  scalarProduct.hh  vectorCreator.cpp
dealII/: Copy.cpp  TutorialsTest.cpp  Vector.cpp  copy.cpp  vector.cpp
